# brightness

./: Cargo.toml  LICENSE  README.md
.github/workflows/: integrate.yaml  rust.yml
brightness-windows/: Cargo.toml  README.md  build.rs
brightness-windows/src/: lib.rs
examples/: list_displays.rs  list_displays_async.rs  set_brightness.rs  set_brightness_async.rs  set_brightness_blocking.rs
src/: blocking.rs  lib.rs  linux.rs  windows.rs
src/blocking/: linux.rs  mod.rs  windows.rs
