[package]
name = "brightness"
version = "0.5.0"
authors = ["Stephane Raux <stephaneyfx@gmail.com>", "Contributors"]
edition = "2018"
description = "Get and set display brightness"
license = "0BSD"
homepage = "https://github.com/stephaneyfx/brightness"
repository = "https://github.com/stephaneyfx/brightness.git"
documentation = "https://docs.rs/brightness"
keywords = ["brightness", "backlight"]

[features]
async = ["async-trait", "futures", "blocking-crate"]
default = ["async"]

[dependencies]
async-trait = { version = "0.1.50", optional = true }
blocking-crate = { package = "blocking", version = "1.2.0", optional = true }
cfg-if = "1.0.0"
futures = { version = "0.3.16", optional = true }
itertools = "0.10.3"
thiserror = "1.0.26"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.29.0"
features = [
    "std",
    "Win32_Foundation",
    "Win32_Devices_Display",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
]

[[example]]
name = "list_displays_async"
path = "examples/list_displays_async.rs"
required-features = ["async"]

[[example]]
name = "set_brightness_async"
path = "examples/set_brightness_async.rs"
required-features = ["async"]
