[package]
name = "brightness"
version = "0.7.0"
authors = ["Stephane Raux <stephaneyfx@gmail.com>", "Contributors"]
edition = "2024"
description = "Get and set display brightness"
license = "0BSD"
homepage = "https://github.com/stephaneyfx/brightness"
repository = "https://github.com/stephaneyfx/brightness.git"
documentation = "https://docs.rs/brightness"
keywords = ["brightness", "backlight"]

[features]
async = ["futures", "blocking"]
default = ["async"]

[dependencies]
blocking = { version = "1.6.1", optional = true }
cfg-if = "1.0.0"
futures = { version = "0.3.30", optional = true }
itertools = "0.13.0"
thiserror = "1.0.61"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "4.2.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.56.0"
features = [
    "Win32_Foundation",
    "Win32_Devices_Display",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
]

[[example]]
name = "list_displays_async"
path = "examples/list_displays_async.rs"
required-features = ["async"]

[[example]]
name = "set_brightness_async"
path = "examples/set_brightness_async.rs"
required-features = ["async"]

[package.metadata.docs.rs]
all-features = true
